# HOSTHAWK

./: Dockerfile  LICENSE  Makefile  README.md  __init__.py  app.py  cli.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  schema.sql  setup.py
core/: __init__.py
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  INSTALLATION.md  QUICK_START.md  README.md  SECURITY.md  USAGE_EXAMPLES.md
plugins/: device_fingerprinter.py  dns_enum.py  snmp_scanner.py  vulnerability_scanner.py  web_crawler.py
reporting/templates/: report.html
scanner/: exceptions.py
scanner/core/: scanner.py
scanner/output/: __init__.py  formatters.py
scanner/plugins/: __init__.py  port_scanner.py
scanner/reporting/: __init__.py  pdf_generator.py  report_generator.py
scanner/reporting/templates/: executive_report.html  technical_report.html
scanner/utils/: __init__.py
static/js/: app.js
utils/: logger.py  validators.py
web/static/css/: style.css
web/static/js/: dashboard.js
web/templates/: index.html
